Fix app refresh, android map visibility, and share url

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,7 +8,7 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-background-color: #dddddd;
+  // --ion-background-color: #dddddd;
 
   --ion-font-family: 'Plex'; 
 
